--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,6 @@
 # Created by .ignore support plugin (hsz.mobi)
 ### Java template
 # Compiled class file
-*.class
-
 # Log file
 *.log
 
@@ -13,7 +11,6 @@
 .mtj.tmp/
 
 # Package Files #
-*.jar
 *.war
 *.nar
 *.ear
@@ -27,3 +24,4 @@ hs_err_pid*
 /target/
 /.idea/
 /src/main/java/MybatisPlusUtils.java
+/src/main/resources/templates/
